--- a/product-galary/product.css
+++ b/product-galary/product.css
@@ -33,9 +33,10 @@
     
 background-size: cover;
 text-align: center;
-position: absolute;
+position: relative;
 font-size: 60px;
 color: white ;
+margin-bottom: 10px;
 }
 
 
