--- a/bulb-on-off/bulb.css
+++ b/bulb-on-off/bulb.css
@@ -2,3 +2,12 @@
 .main-body{
     background-color:rgb(230, 209, 251); 
 }
+.card-light{
+    border: 2px solid blueviolet;
+    width: 500px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 3px 4px lightyellow;
+    padding: 20px;
+   background-color: white;
+}
+
