--- a/score-keeper/css/style.css
+++ b/score-keeper/css/style.css
@@ -1,7 +1,21 @@
+a{
+text-decoration: none;
+}
+
 .btn-properties {
     background-color: blueviolet;
     color: white;
     padding: 5px 15px;
     font-size: 17px;
     border-radius: 5px;
+}
+
+.card-img{
+    width: 303px;
+    height: 202px;
+}
+
+.card-img img{
+    width: 100%;
+    height: 100%; 
 }
