--- a/product-galary/product.css
+++ b/product-galary/product.css
@@ -1,3 +1,10 @@
+.bg-color{
+    background-color: rgb(230, 209, 251);
+}
+
+
+
+
 .img{
     height: 300px;
     margin-top: 10px;
@@ -24,19 +31,27 @@
 }
 .text{
     background-image: url(./background.jpg);
-    position: relative;
-    
-    mask-repeat: no-repeat;
+     mask-repeat: no-repeat;
     height: 700px;
     width: 100%;
     z-index: 100px;
     
 background-size: cover;
-text-align: center;
-position: relative;
-font-size: 60px;
+
+}
+.container{
+    position: relative;
+}
+.script{
+    display: flex;
+    text-align: center;
+position: absolute;
+font-size: 90px;
 color: white ;
-margin-bottom: 10px;
+bottom: 270px;
+left: 300px;
+
+
 }
 
 
