--- a/product-galary/product.css
+++ b/product-galary/product.css
@@ -7,6 +7,10 @@
     padding: 5px;
 }
 
+.font-size{
+    font-size: 80px;
+    margin-bottom: 30px;
+}
 
 
 
@@ -25,9 +29,7 @@
 .container{
     position: relative;
 }
-.cards{
-    margin-top: 300px;
-}
+
 .script{
     display: flex;
     text-align: center;
