some changes are made

--- a/score-keeper/css/style.css
+++ b/score-keeper/css/style.css
@@ -20,11 +20,11 @@ text-decoration: none;
     height: 100%; 
 } */
 
-.row{
+/* .row{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-}
+} */
 .height{
    height: 400px; 
    
