--- a/bulb-on-off/bulb.css
+++ b/bulb-on-off/bulb.css
@@ -6,7 +6,7 @@
     border: 2px solid blueviolet;
     /* width: 300px; */
     border-radius: 10px;
-    box-shadow: 0px 0px 2px 2px blueviolet;
+    box-shadow: 0px 0px 5px 5px #e6d1fa;
     padding: 10px;
    background-color: white;
 }
