--- a/bulb-on-off/bulb.css
+++ b/bulb-on-off/bulb.css
@@ -13,7 +13,9 @@
 .bg-pink{
     color: rgb(202, 16, 249) !important;
 }
-
+.bg-violet{
+    background-color:  blueviolet;;
+}
 .footer1{
       display: flex;
               flex-direction: row;
