--- a/score-keeper/css/style.css
+++ b/score-keeper/css/style.css
@@ -68,6 +68,10 @@ a {
     flex-direction: row;
     justify-content: space-around;
 }
+
+.links{
+    margin-left: 150px;
+}
 @media screen and (max-width:600px) {
     .update-btn button {
         width: 88px;
@@ -77,14 +81,20 @@ a {
         font-size: 41px;
         margin: 10px;
     }
+
+    .links{
+        margin-left: 0;
+    }
+
+    .footer1 {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 
 
 @media screen and (max-width:600px) {
-    .footer1 {
-        display: flex;
-        flex-direction: column;
-    }
+    
 
 }
